# detectron2

./: pyproject.toml  setup.cfg  setup.py
docs/: requirements.txt
