[tool.poetry]
name = "detectron2"
version = "0.1.0"
description = ""
authors = ["teisnp <teis.n.p@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
docutils = "0.16"
sphinx = "3.2.0"
recommonmark = "0.6.0"
sphinx-rtd-theme = "^1.3.0"
termcolor = "^2.3.0"
numpy = "^1.26.0"
tqdm = "^4.66.1"
matplotlib = "^3.8.0"
yacs = "^0.1.8"
tabulate = "^0.9.0"
cloudpickle = "^2.2.1"
pillow = "^10.0.1"
future = "^0.18.3"
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"
scipy = "^1.11.3"
timm = "^0.9.7"
torch = {url = "https://download.pytorch.org/whl/cu117_pypi_cudnn/torch-2.0.1%2Bcu117.with.pypi.cudnn-cp310-cp310-linux_x86_64.whl"}
fvcore = "^0.1.5.post20221221"


[build-system]
requires = ["setuptools", "torch==2.0.1"]
build-backend = "setuptools.build_meta"